--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "express": "^4.17.3",
     "jest": "^27.5.1",
+    "mongodb": "^4.5.0",
     "mongoose": "^6.3.0",
     "supertest": "^6.2.2"
   },
